added operator percent and changed UI to resemble mac calculator

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-calculator",
   "version": "0.1.0",
+  "homepage":"http://amandarfernandes.github.io/react-calculator",
   "private": true,
   "dependencies": {
     "prop-types": "^15.6.2",
@@ -12,12 +13,18 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  }
+  ,
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.0"
+  }
 }
